ilk kesme işlemi